# HessianPlayground

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  datasets.py  equations.py  hessian.py  main.py  server.py  session.py  ws_handler.py
frontend/: app.js  i18n.js  index.html  style.css
frontend/presets/: dataset.py  mlp.py  optimizer.py  resnet.py  swiglu.py  transformer.py
src/backend/: activation_stats.py  config.py  datasets.py  equations.py  fisher.py  gradient_stats.py  hessian.py  landscape.py  main.py  model_sandbox.py  ntk.py  protocol.py  remote.py  remote_worker.py  server.py  session.py  training.py  utils.py  ws_handler.py
